chore: 修改lint规则以处理条件表达式

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,7 +31,10 @@
     "indent": [
       "error",
       2,
-      { "SwitchCase": 1 }
+      {
+        "SwitchCase": 1,
+        "ignoredNodes": "ConditionalExpression"
+      }
     ],
     "linebreak-style": [ "error", "windows" ],
     "quotes": [ "error", "single" ],
