fix: eslint报错问题修复

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,7 +33,7 @@
       2,
       {
         "SwitchCase": 1,
-        "ignoredNodes": "ConditionalExpression"
+        "ignoredNodes": [ "ConditionalExpression" ]
       }
     ],
     "linebreak-style": [ "error", "windows" ],
