--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "extends": "./src/.umi/tsconfig.json",
   "compilerOptions": {
     "outDir": "build/dist",
     "module": "esnext",
@@ -17,10 +18,7 @@
     "allowJs": true,
     "skipLibCheck": true,
     "experimentalDecorators": true,
-    "strict": true,
-    "paths": {
-      "@/*": ["./src/*"]
-    }
+    "strict": true
   },
   "include": [
     "mock/**/*",
