--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -68,6 +68,7 @@
         "functions": "always-multiline"
       }
     ],
+    "eol-last": [ "error", "always" ],
     //eslint-plugin-react配置
     //规则文档: https://github.com/jsx-eslint/eslint-plugin-react/tree/master/docs/rules
     "react/sort-comp": [ 2 ],
