--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -76,6 +76,14 @@
         "maxEOF": 0
       }
     ],
+    "space-before-function-paren": [
+      "error",
+      {
+        "named": "never",
+        "anonymous": "always",
+        "asyncArrow": "always"
+      }
+    ],
     //eslint-plugin-react配置
     //规则文档: https://github.com/jsx-eslint/eslint-plugin-react/tree/master/docs/rules
     "react/sort-comp": [ 2 ],
