fix: 添加关键词空格lint并lint代码

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -84,6 +84,13 @@
         "asyncArrow": "always"
       }
     ],
+    "keyword-spacing": [
+      "error",
+      {
+        "before": true,
+        "after": true
+      }
+    ],
     //eslint-plugin-react配置
     //规则文档: https://github.com/jsx-eslint/eslint-plugin-react/tree/master/docs/rules
     "react/sort-comp": [ 2 ],
