--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -91,6 +91,7 @@
         "after": true
       }
     ],
+    "space-before-blocks": "error",
     //eslint-plugin-react配置
     //规则文档: https://github.com/jsx-eslint/eslint-plugin-react/tree/master/docs/rules
     "react/sort-comp": [ 2 ],
