--- a/package.json
+++ b/package.json
@@ -6,28 +6,28 @@
     "build": "umi build",
     "setup": "umi setup",
     "postinstall": "umi setup",
-    "prepare": "husky install"
+    "prepare": "husky"
   },
   "dependencies": {
-    "@ant-design/icons": "^5.2.6",
-    "@ant-design/pro-components": "^2.6.31",
-    "antd": "^5.10.2",
-    "axios": "^1.5.1",
-    "dva": "^2.6.0-beta.23",
-    "umi": "^4.0.87"
+    "@ant-design/icons": "^5.5.1",
+    "@ant-design/pro-components": "^2.7.19",
+    "antd": "^5.21.2",
+    "axios": "^1.7.7",
+    "dva": "^3.0.0-alpha.1",
+    "umi": "^4.3.24"
   },
   "devDependencies": {
-    "@types/express": "^4.17.20",
-    "@types/react": "^18.2.31",
-    "@types/react-dom": "^18.2.14",
-    "@typescript-eslint/eslint-plugin": "^6.8.0",
-    "@typescript-eslint/parser": "^6.8.0",
+    "@types/express": "^5.0.0",
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^8.8.1",
+    "@typescript-eslint/parser": "^8.8.1",
     "@umijs/fabric": "^4.0.1",
-    "@umijs/plugins": "^4.0.87",
-    "eslint": "^8.52.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "husky": "^8.0.3",
-    "typescript": "^5.2.2"
+    "@umijs/plugins": "^4.3.24",
+    "eslint": "^9.12.0",
+    "eslint-plugin-react": "^7.37.1",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "husky": "^9.1.6",
+    "typescript": "^5.6.2"
   }
 }
